@@ -20,7 +20,7 @@
 #include "pbc.h"
 #include "parser.h"
 
-#define IMCC_VERSION "0.0.9.15"
+#define IMCC_VERSION "0.0.10.0"
 
 static int run_pbc, write_pbc;
 static char optimizer_opt[20];
@@ -67,7 +67,19 @@ static void help(void)
 static void imcc_version(void)
 {
     printf("imcc version " IMCC_VERSION "\n");
-    exit(0);
+    printf("This is parrot version " PARROT_VERSION " built for "
+            PARROT_ARCHNAME "\n\
+Copyright (C) 2001-2003 Yet Another Society.  All Rights Reserved.\n\
+\n\
+Parrot may be copied only under the terms of either the Artistic License or the\n\
+GNU General Public License, which may be found in the Parrot source kit.\n\
+\n\
+This program is distributed in the hope that it will be useful,\n\
+but WITHOUT ANY WARRANTY; without even the implied warranty of\n\
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See either\n\
+the GNU General Public License or the Artistic License for more details.\n\n");
+
+    Parrot_exit(0);
 }
 
 #define setopt(flag) Parrot_setflag(interp, flag, (*argv)[0]+2)
